2005-03-30  mallum,,,  <mallum@openedhand.com>

	* Makefile:
	* cltr-photo-grid.c: (cltr_photo_grid_populate),
	(cltr_photo_grid_redraw):
	* cltr-photo-grid.h:
	* cltr-tex.c:
	* cltr-tex.h:
	* cltr.c: (main):
	* cltr.h:
	* pixbuf.c: (pixbuf_unref), (pixbuf_copy):
	* pixbuf.h:
	Add intial new texture tiling code.

2005-03-27  mallum,,,  <mallum@openedhand.com>

	* Makefile:
	* cltr-photo-grid.c: (cltr_photo_grid_cell_new),
	(ctrl_photo_grid_get_zoomed_coords), (cltr_photo_grid_navigate),
	(cltr_photo_grid_activate_cell), (cltr_photo_grid_populate),
	(cltr_photo_grid_redraw), (cltr_photo_grid_new):
	* cltr-photo-grid.h:
	* cltr.c: (cltr_dispatch_x_event), (cltr_init), (test_idle_cb),
	(main):
	* cltr.h:
	Add a very hacky threaded image loader. 
	Make event handling a little more efficient, though still hacky
	* pixbuf.c: (pixel_set_vals), pixbuf.h:
	Add copy func ( unused as yet )

2005-03-25  mallum,,,  <mallum@openedhand.com>

	* cltr-photo-grid.c: (cltr_photo_grid_cell_new),
	(ctrl_photo_grid_get_zoomed_coords), (cltr_photo_grid_redraw),
	(cltr_photo_grid_new):
	* cltr-photo-grid.h:
	* cltr.c: (cltr_window_new), (idle_cb), (main):
	Use GL matrices in a saner way.
	Add random rotation to picts
	Random minor tweaks

2005-03-24  mallum,,,  <mallum@openedhand.com>

	* Makefile:
	* cltr-photo-grid.c:
	* cltr-photo-grid.h:
	* cltr.c: (cltr_window_new), (cltr_main_loop):
	* cltr.h:
	Split up cltr.c a bit. start refactoring a bit.

2005-03-23  mallum,,,  <mallum@openedhand.com>

	* cltr.c: (cltr_photo_grid_populate), (cltr_photo_grid_redraw),
	(cltr_photo_grid_new), (main):
	* cltr.h:
	Various minor tweaks
	* pixbuf.c: (pixbuf_set_pixel), (pixbuf_get_pixel):
	Fix RGBA ordering in set/get pixel

2005-03-23  mallum,,,  <mallum@openedhand.com>

	* cltr.c: (ctrl_photo_grid_get_trans_coords),
	Fix grid co-ords -> translation vals converter
	(cltr_photo_grid_navigate), (cltr_photo_grid_redraw),
	(cltr_photo_grid_new), (idle_cb):
	Fix moving between pictures when zoomed

